test/Tests/Optics/Overlapping.golden

test\Tests\Optics\Overlapping.hs:34:5: error:
    * Cannot create product setter.
      Name "field_0" and index 0 refer to the same field.
    * In a stmt of a 'do' block:
        assign
          @(Name "struct"
            :.:
            (Prod (Name "field_0"
                   :*: Index 0 :*: EndProd) :: Optic '[] MyStruct OtherStruct))
          (Lit (4 :& 5 :& End))
      In the third argument of `entryPoint', namely
        `do def @"struct" @RW @MyStruct (Lit (3 :& True :& End))
            assign
              @(Name "struct"
                :.:
                (Prod (Name "field_0"
                       :*: Index 0 :*: EndProd) :: Optic '[] MyStruct OtherStruct))
              (Lit (4 :& 5 :& End))'
      In a stmt of a 'do' block:
        entryPoint
          @"main"
          @Vertex
          do def @"struct" @RW @MyStruct (Lit (3 :& True :& End))
             assign
               @(Name "struct"
                 :.:
                 (Prod (Name "field_0"
                        :*: Index 0 :*: EndProd) :: Optic '[] MyStruct OtherStruct))
               (Lit (4 :& 5 :& End))
   |
34 |     assign
   |     ^^^^^^^...
